# hara-desktop

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  WORKFLOW.md  package-lock.json  package.json  pet-chat.html  vite.config.ts
.github/: actionlint.yaml
docs/: ADR-UI-001_DESKTOP_WORKBENCH_AND_COMPANION.md  NOVICE_WORKBENCH_ARCHITECTURE.md  OFFICE_OPEN_CORE_EXECUTION_PLAN.md  OFFICE_TEMPLATE_COMPONENT_SYSTEM.md  PETS.md  PPT_MASTER_INTEGRATION_AUDIT.md  PRESENTATION_CAPABILITY_ARCHITECTURE.md
scripts/: build-mac-signed.sh  check-build-toolchain.sh  check-release-metadata.mjs  codesign-timestamp-retry.mjs  collect-release-assets.mjs  github-api-read.mjs  github-release-transfer-retry.mjs  mac-dmg-smoke.mjs  mac-updater-smoke.mjs  notarize-artifact.mjs  package-smoke.mjs  refresh-sidecar.sh  release-mac-assets.sh  release-policy.mjs  release-provenance.mjs  release-shell-safety.sh  release-source-provenance.mjs  resolve-remote-tag.mjs  sidecar-smoke.mjs  stapler-validate.mjs  updater-manifest.mjs  updater-signature.mjs  verify-matrix-receipts.mjs  verify-release-updaters.mjs
src/: App.css  App.tsx  AppRail.tsx  ArtifactWorkbench.tsx  Automations.css  Automations.tsx  ConversationTimeline.tsx  PetChat.css  (+29 more)
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/binaries/: SIDECAR_COMMIT  SIDECAR_VERSION
src-tauri/capabilities/: default.json  pet-chat.json  pet.json
src-tauri/examples/: verify_updater_signature.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  windows_process.rs
src-tauri/windows/: installer-hooks.nsh
(+13 files in other folders)
